# agent-team-demo

./: .gitignore  README.md  pyproject.toml
taskflow/: __init__.py  __main__.py
taskflow/cli/: __init__.py  app.py
taskflow/models/: __init__.py  task.py
taskflow/services/: __init__.py  task_service.py
taskflow/storage/: __init__.py  base.py  json_storage.py
tests/: __init__.py  test_cli.py  test_models.py  test_services.py  test_storage.py
